[package]
name = "ferrous-tale"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
image = "0.24.8"
include_dir = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.32"
softbuffer = "0.4.1"
winit = "0.29.10"


[features]
portable = []
